[gd_scene load_steps=8 format=3 uid="uid://bpi1ucywaplpt"]

[ext_resource type="Texture2D" uid="uid://oj3bf4vusxdi" path="res://sprite-sheet.svg" id="1_jq50j"]
[ext_resource type="Script" path="res://Objects/Weapon2D/Weapon2D.gd" id="1_ws3ny"]
[ext_resource type="PackedScene" uid="uid://c344e70v616l1" path="res://Objects/Weapon2D/Bullets/Bullet.tscn" id="2_00uel"]
[ext_resource type="PackedScene" uid="uid://cp1gm64jugnge" path="res://Objects/Weapon2D/RangePreview/RangePreview.tscn" id="3_so6t4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nk4w6"]
resource_local_to_scene = true
radius = 128.0

[sub_resource type="Animation" id="Animation_ki7rv"]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 2.08165e-12), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5pg4i"]
_data = {
"shoot": SubResource("Animation_ki7rv")
}

[node name="Weapon2D" type="Node2D"]
script = ExtResource("1_ws3ny")
bullet_scene = ExtResource("2_00uel")

[node name="BulletSpawnPosition2D" type="Node2D" parent="."]
position = Vector2(64, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jq50j")
offset = Vector2(40, 2.08165e-12)
region_enabled = true
region_rect = Rect2(192, 176, 54, 18)

[node name="RangeArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Circle2D" type="CollisionShape2D" parent="RangeArea2D"]
shape = SubResource("CircleShape2D_nk4w6")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5pg4i")
}

[node name="RangePreview" parent="." instance=ExtResource("3_so6t4")]
